--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
 <body>
     <header>
         <nav>
-            <div class="left">Bhanu's Portfolio</div>
+            <div class="left">
+                <ul>
+                    <li><a href="index.html">Bhanu Kiran's Portfolio</a></li>
+                </ul>
+            </div>
             <div class="right">
                 <ul>
                     <li><a href="index.html">Home</a></li>
