--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
             color: white;
             font-family: 'Poppins', sans-serif;
         }
+
         nav {
-            .left{
+            .left {
                 font-size: 1rem;
             }
+
             display: flex;
             justify-content: space-around;
             align-items: center;
             height: 80px;
             background-color: rgb(33, 0, 63);
         }
+
         nav ul {
             display: flex;
             justify-content: center;
@@ -136,6 +139,7 @@
         .btn-github {
             background-color: rgb(145, 0, 211);
         }
+
         @media (max-width: 768px) {
             .section {
                 padding: 40px 20px;
@@ -150,6 +154,20 @@
                 font-size: 14px;
                 margin: 5px;
             }
+        }
+        footer ul li {
+            list-style: none;
+            margin: 0 23px;
+        }
+
+        footer ul li a {
+            text-decoration: none;
+            color: white;
+        }
+
+        footer ul li a:hover {
+            color: rgb(211, 115, 255);
+            font-size: 1.02rem;
         }
     </style>
 </head>
@@ -181,8 +199,10 @@
                 </div> -->
                 <span id="element"></span>
                 <div class="buttons">
-                    <a href="https://drive.google.com/file/d/116ijL2fWf-iDeSvRf4qAPzaCytmFk-RY/view?usp=sharing" target="_blank" class="btn btn-resume">Resume</a>
-                    <a href="https://www.linkedin.com/in/bhanu5102/" target="_blank" class="btn btn-linkedin">LinkedIn</a>
+                    <a href="https://drive.google.com/file/d/116ijL2fWf-iDeSvRf4qAPzaCytmFk-RY/view?usp=sharing"
+                        target="_blank" class="btn btn-resume">Resume</a>
+                    <a href="https://www.linkedin.com/in/bhanu5102/" target="_blank"
+                        class="btn btn-linkedin">LinkedIn</a>
                     <a href="https://github.com/BhanukiranG" target="_blank" class="btn btn-github">GitHub</a>
                 </div>
             </div>
@@ -199,9 +219,9 @@
             </div>
             <div class="second"></div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact Me</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
             </ul>
             <div class="third"></div>
             <div class="fourth"></div>
